# QDecorations

./: CMakeLists.txt  README.md  flake.nix
nix/: homeModule.nix  package.nix
src/: CMakeLists.txt  QCatppuccinDecorations.cpp
